--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,9 @@ grid-template-columns:80% 20%;
 }
 .sidebar-basket{
   background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px; */
   border-style: solid;
+  border-color:#282c34;
   border-width: 1px;
 }
 
@@ -62,19 +63,124 @@ grid-template-columns:80% 20%;
 }
 
 /*cart*/
-#h2{
-
+.h2{
+  margin-top: 1px;
 }
 
-.cart {
+
+/* .cart {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 11px 90px;
+} */
+.column {
+  display: flex;
+  justify-content: space-between;
+}
+.column2{
+  display: flex;
+  flex-direction: column;  
 }
 
-#row{
+
+.row{
   display: flex;
   flex-direction: row;
-  justify-content: right;
+  justify-content: end;
+}
+
+.price {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+  color:black;
+  font-family:'Courier New', Courier, monospace;
+}
+
+/* BASKET CSS*/
+
+/* .h4{
+  color: black;
+  margin: 0;
+} */
+
+
+.h5 {
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: #282c34;
+}
+
+.shop {
+  display: grid;
+  grid-template-columns: 20% 90%;
+  margin: 1rem;
+}
+.title {
+  margin-left: 5rem;
+  margin-top: 1rem;
+}
+
+.img{
+  width: 150px;
+  height: 100%;
+  
+}
+.counter1{
+  display: flex;
+  justify-content: flex-end;
+  width: 80%;
+  margin: 1rem;  
+}
+.counter {
+  display: flex;
+  justify-content: center;
+  border: #282c34;
+  margin: 2rem;
+  border-style: solid;
+  border-radius: 20px;
+  border-width: 1px;
+}
+.click {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem;
+}
+#clear {
+  padding: 15px;
+  width: 40%;
+  background-color:beige;
+  border: #282c34;
+  border-style: solid;
+  border-width: 1px;
+  background-color: #282c34;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+#checkout {
+  padding: 15px;
+  width: 40%;
+  background-color:beige;
+  border: #282c34;
+  border-style: solid;
+  border-width: 1px;
+  background-color: #282c34;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+/*home*/
+#empty {
+  display: flex;
+  justify-content: center;
+  margin-top: 15rem;
+}
+#basket-icon {
+  display: flex;
+  justify-content: center;
 }
