--- a/src/App.css
+++ b/src/App.css
@@ -50,11 +50,8 @@ grid-template-columns:80% 20%;
   margin: 2rem;
 }
 .sidebar-basket{
-  background-color: white;
-  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px; */
-  border-style: solid;
-  border-color:#282c34;
-  border-width: 1px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;  /* border-style: solid; */
+  
 }
 
 /* SIGN UP */
@@ -100,46 +97,47 @@ grid-template-columns:80% 20%;
 
 /* BASKET CSS*/
 
-/* .h4{
-  color: black;
-  margin: 0;
-} */
 
 
-.h5 {
-  display: flex;
-  justify-content: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  color: #282c34;
-}
-
-.shop {
+.container-cart{
   display: grid;
-  grid-template-columns: 20% 90%;
-  margin: 1rem;
+  grid-template-columns: 40% 60%;
+  height:50% ;
+  padding: 5px;
 }
-.title {
-  margin-left: 5rem;
-  margin-top: 1rem;
+.title-cart {
+ font-size: 17px;
+ color: grey;
+ font-family:Arial, Helvetica, sans-serif;
 }
 
-.img{
-  width: 150px;
-  height: 100%;
+.price-cart{
+  font-size: 15px;
+}
+.left-side img{
+  background-size: cover;
+  height:100%;
+  width:100%;
   
 }
+.right-side{
+  padding: 5px;
+}
+.price-delete{
+  margin: 0px 0px 0px 0px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .counter1{
   display: flex;
-  justify-content: flex-end;
+  margin-bottom: 10px;
   width: 80%;
-  margin: 1rem;  
+ 
 }
 .counter {
   display: flex;
-  justify-content: center;
   border: #282c34;
-  margin: 2rem;
   border-style: solid;
   border-radius: 20px;
   border-width: 1px;
@@ -149,14 +147,19 @@ grid-template-columns:80% 20%;
   justify-content: space-between;
   margin: 1rem;
 }
+.total{
+  display: flex;
+ 
+  justify-content: space-between;
+}
 #clear {
   padding: 15px;
   width: 40%;
-  background-color:beige;
+  /* background-color:beige; */
   border: #282c34;
   border-style: solid;
   border-width: 1px;
-  background-color: #282c34;
+  /* background-color: #282c34; */
   color: white;
   font-size: 18px;
   cursor: pointer;
@@ -164,11 +167,11 @@ grid-template-columns:80% 20%;
 #checkout {
   padding: 15px;
   width: 40%;
-  background-color:beige;
+  /* background-color:beige; */
   border: #282c34;
   border-style: solid;
   border-width: 1px;
-  background-color: #282c34;
+  /* background-color: #282c34; */
   color: white;
   font-size: 18px;
   cursor: pointer;
