--- a/src/App.css
+++ b/src/App.css
@@ -108,7 +108,7 @@ grid-template-columns:80% 20%;
 .title-cart {
  font-size: 17px;
  color: grey;
- font-family:Arial, Helvetica, sans-serif;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 .price-cart{
@@ -129,27 +129,53 @@ grid-template-columns:80% 20%;
   justify-content: space-between;
 }
 
-.counter1{
+/* .counter1{
   display: flex;
   margin-bottom: 10px;
-  width: 80%;
- 
+  width: 20%;
+  
+  
+  
+} */
+.addicon {
+  font-weight: 900 !important;
+  
 }
 .counter {
   display: flex;
-  border: #282c34;
+  border: #D0D0D0;
   border-style: solid;
   border-radius: 20px;
   border-width: 1px;
+  padding-right: 11px;  
+  padding-left: 11px;
+
 }
+#span{
+  font-size: 13px;
+  color:#282c34;
+}
+.span {
+  font-size: 14px;
+  padding: 4px;  
+  color: #505050;
+
+}
+.row1{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  }
+
 .click {
   display: flex;
   justify-content: space-between;
   margin: 1rem;
+
 }
 .total{
   display: flex;
- 
+  margin: 1rem;
   justify-content: space-between;
 }
 #clear {
@@ -176,7 +202,14 @@ grid-template-columns:80% 20%;
   font-size: 18px;
   cursor: pointer;
 }
-
+ 
+#span2{
+  display: flex;
+  justify-content: end;
+  margin: 1rem;
+  font-size: 15px;
+}
+#clear 
 /*home*/
 #empty {
   display: flex;
